updated to images

--- a/docs/09.01.01 - Analyzing Azure DevOps Work Item Revisions.md
+++ b/docs/09.01.01 - Analyzing Azure DevOps Work Item Revisions.md
@@ -13,23 +13,28 @@ In this example, the process **we are evaluating is our team's progress towards 
 ## Configuring the Process Mining template
 Located within **make.powerautomate.com** is the Process Advisor tool. The tool provides various templates for both Power Platform and Azure resources. For this example, we will start with the [**Azure DevOps**](https://learn.microsoft.com/en-us/power-automate/process-mining-azure-templates) work item template.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/SolutionAwareFlows.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/ProcessAdvisor/DevOps/GettingStartedDevOpsTemplate.png" style="zoom:50%;" />
 
 One of the benefits of the template is the data flow configuration. Having this as a starting point allow users to quickly build off of or simply learn more about how process mining gathers information. 
 
 The template expects the Azure DevOps organization, project and an area name to begin.
 <!-- Template Pamarters -->
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/SolutionAwareFlows.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/ProcessAdvisor/DevOps/GettingStartedDevOpsTemplateParameters.png" style="zoom:50%;" />
 
 These parameters simply help build the default data flow URL.
 **NOTE: The default template as of this writing looks for work item types bug or product backlog item. If you're missing these the initial analysis may fail. Add a test bug or product backlog item to allow the analysis to complete.**
 <!-- DataFlow 01 -->
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/SolutionAwareFlows.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/ProcessAdvisor/DevOps/GettingStartedDevOpsTemplateDataFlow01.png" style="zoom:50%;" />
 
-Once the initial analysis has completed, you'll be presented with the output providing insights on both the work item revisions and a time analysis. The analysis will also provide data quality metrics. **If the data quality is low or medium, consider following the recommendations which typically ask for additional event logging with more variance and acitivies.**
+Once the initial analysis has completed, you'll be presented with the output providing insights on both the work item revisions and a time analysis. 
+
+<!-- multiple  -->
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/ProcessAdvisor/DevOps/GettingStartedDevOpsAnalyticsVisualExampleSingle.png" style="zoom:50%;" />
+
+The analysis will also provide data quality metrics. **If the data quality is low or medium, consider following the recommendations which typically ask for additional event logging with more variance and acitivies.**
 
 <!-- low data quality -->
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/SolutionAwareFlows.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/ProcessAdvisor/DevOps/GettingStartedDevOpsAnalyticsLowDataQuality.png" style="zoom:50%;" />
 
 ## Modifying the Process Mining template for deeper analysis
 
@@ -45,7 +50,7 @@ https://analytics.dev.azure.com/powerplatformpod/customer%20demos/_odata/v3.0-pr
 
 Below is an image showing the a bug with multiple revisions. Using the **ChangedDate** we can follow the progression of the bug by review changed properties.
 <!-- TimeStamp Examlple -->
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/SolutionAwareFlows.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/ProcessAdvisor/DevOps/GettingStartedDevOpsAnalyticsTimestampExample.png" style="zoom:50%;" />
 
 In the example above, we have multiple roles working in different teams towards our project milestones. Our process management team, following a standard agile process, wants to **highlight inefficences in resolution of bugs and tasks as they pertain to user stories, features and epics.**
 The team is tasked with crafting a query to span across multiple work item types and teams (area paths) within Azure DevOps.
@@ -60,7 +65,7 @@ https://analytics.dev.azure.com/contoso/projectAlpha/_odata/v3.0-preview/WorkIte
 
 Once expanded, we can see the visual has also expanded to include additional work item states and the paths followed. **Using the Insights tab, we can begin to drill into the data looking at process paths for inefficiences.**
 <!-- DataInsights -->
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/SolutionAwareFlows.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/ProcessAdvisor/DevOps/GettingStartedDevOpsAnalyticsDataInsights.png" style="zoom:50%;" />
 
 
 ## Analyzing the output for insights and action
@@ -70,9 +75,15 @@ The Process Insights feature is key once we have gathered and churned our work i
 
 At first glance, the results can be a bit daunting. Luckily, the drill down slicers can help isolate workloads. 
 
-**I would suggest adding additional columns in the output of the Data Flow to provide increased filter opportunities.**
+**I would suggest adding additional columns in the output of the data flow to provide increased filter opportunities.**
 
-The visual on the left defaults to work item states. This is useful to highlight how many work items followed a specific path taken. For instance, we can analyze user stories that have stayed in a specific state creating bottlenecks in a release. We can analyze features that were deployed but had to roll back due to bugs found in testing or a release. **A filter I would apply here would be the reason for an update to the work item. That can help us better visualize why a feature for instance went from closed back to active.**
+The visual on the left defaults to work item states. This is useful to highlight how many work items followed a specific path taken. The image below shows the changes in state across work items.
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/ProcessAdvisor/DevOps/GettingStartedDevOpsAnalyticsVisualExampleMultiple.png" style="zoom:50%;" />
+
+For instance, we can analyze user stories that have stayed in a specific state creating bottlenecks in a release. We can analyze features that were deployed but had to roll back due to bugs found in testing or a release. **A filter I would apply here would be the reason for an update to the work item. That can help us better visualize why a feature for instance went from closed back to active.**
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/ProcessAdvisor/DevOps/GettingStartedDevOpsAnalyticsVisualExampleMultiple.png" style="zoom:50%;" />
 
 Speaking of features and bugs related to bottlenecks, adding both the Area Path and Iteration Path will definitely help here. **These two properties will help drill down into each work type to determine the flow of features and bugs.**
 
@@ -82,7 +93,7 @@ Having the ability to gain a holistic view of features as they progress across i
 
 ## Next Steps
 
-
+In the next article, we will continue fine tuning Process Advisor. Specifically work on creating valuable activity and case identifiers to help build stronger insights.
 
 If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your  **Microsoft representative** for further details. 
 
