updated portal verbiage

--- a/docs/02.01 - Monitoring Power Apps Portal.md
+++ b/docs/02.01 - Monitoring Power Apps Portal.md
@@ -85,6 +85,8 @@ Below is an example of referencing a logged in user's information to set the aut
 
 **<u>Author's Note:</u>** Big thanks to **[Nikita Polyakov](https://www.linkedin.com/in/nikitapolyakov/)** for his assistance with creating and identifying enhancements to this script!
 
+**[03-2021 UPDATE: I've been informed that the previous images and sample code could surface personal identifiable information. Be cautious collecting user information, such as a full name. The images below have been updated to reflect the change in the sample code.]**
+
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/LiquidTemplate.User.Context.PNG" style="zoom: 80%;" />
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/portal.AppInsightsSnippet.Liquid.User.PNG" style="zoom: 80%;" />
