--- a/docs/09.01.01 - Analyzing Azure DevOps Work Item Revisions.md
+++ b/docs/09.01.01 - Analyzing Azure DevOps Work Item Revisions.md
@@ -1,4 +1,4 @@
-# Monitoring the Power Platform: Analyzing Azure DevOps Work Item Revisions with Process Advisor
+# Analyzing Azure DevOps Work Item Revisions with Process Advisor - Part 1
 
 ## Summary
 
@@ -75,30 +75,25 @@ The Process Insights feature is key once we have gathered and churned our work i
 
 At first glance, the results can be a bit daunting. Luckily, the drill down slicers can help isolate workloads. 
 
-**I would suggest adding additional columns in the output of the data flow to provide increased filter opportunities.**
+**<u>I would suggest adding additional columns in the output of the data flow to provide increased filter opportunities.</u>**
 
 The visual on the left defaults to work item states. This is useful to highlight how many work items followed a specific path taken. The image below shows the changes in state across work items.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/ProcessAdvisor/DevOps/GettingStartedDevOpsAnalyticsVisualExampleMultiple.png" style="zoom:50%;" />
 
-For instance, we can analyze user stories that have stayed in a specific state creating bottlenecks in a release. We can analyze features that were deployed but had to roll back due to bugs found in testing or a release. **A filter I would apply here would be the reason for an update to the work item. That can help us better visualize why a feature for instance went from closed back to active.**
+For instance, we can analyze user stories that have stayed in a specific state creating bottlenecks in a release. We can analyze features that were deployed but had to roll back due to bugs found in testing or a release. **<u>A filter I would apply here would be the reason for an update to the work item.</u> That can help us better visualize why a feature for instance went from closed back to active.**
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/ProcessAdvisor/DevOps/GettingStartedDevOpsAnalyticsVisualExampleMultiple.png" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/ProcessAdvisor/DevOps/AzureDevOpsWorkItemReasonExample.png" style="zoom:50%;" />
 
-Speaking of features and bugs related to bottlenecks, adding both the Area Path and Iteration Path will definitely help here. **These two properties will help drill down into each work type to determine the flow of features and bugs.**
+Speaking of features and bugs related to bottlenecks, **<u>adding both the Area Path and Iteration Path</u>** will definitely help here. **These two properties will help drill down into each work type to determine the flow of features and bugs.**
 
-Having the ability to gain a holistic view of features as they progress across iterations can help organizatons make important distinctions. Not only are the number of features completed within an iteration shown, but we can also reflect on past iterations and how many features span across multiple iterations. We can review how many ended up being released or made the cutting room floor.
+Having **the ability to gain a holistic view of features as they progress across iterations can help organizatons make important distinctions.** Not only are the number of features completed within an iteration shown, but we can also reflect on past iterations and how many features span across multiple iterations. We can review how many ended up being released or made the cutting room floor.
 
-**Overall, to enhance the drill down visualization and analysis, I would add the Area Path, Iteration Path for user stories, features and epics and the Found and Integrated into Build fields for bugs, test cases and suites.**
+**Overall, to enhance the drill down visualization and analysis, <u>I would add the Area Path, Iteration Path for user stories, features and epics and the Found and Integrated into Build fields for bugs, test cases and suites.</u>**
 
 ## Next Steps
 
-In the next article, we will continue fine tuning Process Advisor. Specifically work on creating valuable activity and case identifiers to help build stronger insights.
-
-If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your  **Microsoft representative** for further details. 
+In the next article, we will continue fine tuning Process Advisor. Specifically work on creating valuable activity and case identifiers to help build stronger insights. We will also look to build more robust filters.
 
 Your feedback is **<u>extremely valuable</u>** so please leave a comment below and I'll be happy to help where I can! Also, if you find any inconsistencies, omissions or have suggestions, [please go here to submit a new issue](https://github.com/aliyoussefi/MonitoringPowerPlatform/issues).
 
-## Index
-
-[Monitoring the Power Platform: Introduction and Index](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-introduction)
